--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
+sudo: true
+dist: xenial
 before_install:
- - sudo apt-get install cmake
+ - sudo apt-get -y install cmake
  - sudo add-apt-repository ppa:beineri/opt-qt591-xenial
  - sudo apt-get update
- - sudo apt-get install qt59-meta-full
- - sudo apt-get install qt59-meta-dbg-full
- - sudo apt-get install qt59creator
+ - sudo apt-get -y install qt59-meta-full
+ - sudo apt-get -y install qt59-meta-dbg-full
+ - sudo apt-get -y install qt59creator
 
 script:
  - cmake .
