--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 sudo: true
-dist: xenial
+dist: trusty
 before_install:
  - sudo apt-get -y install cmake
- - sudo add-apt-repository ppa:beineri/opt-qt591-xenial
+ - sudo add-apt-repository -y ppa:beineri/opt-qt591-xenial
  - sudo apt-get update
  - sudo apt-get -y install qt59-meta-full
  - sudo apt-get -y install qt59-meta-dbg-full
