--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ before_install:
  - sudo apt-get -y install qt59-meta-full
  - sudo apt-get -y install qt59-meta-dbg-full
  - sudo apt-get -y install qt59creator
- - sudo apt-get -y install qtdeclarative5-dev
-
+ - sudo apt-get -y install qtdeclarative5-qtquick2-plugin
+ - qmake -v
 script:
  - cmake .
  - make
