--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,51 @@
-sudo: true
-dist: trusty
-before_install:
- - sudo apt-get -y install cmake
- - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
- - sudo apt-get update
- - sudo apt-get -y install qt59-meta-full
- - sudo apt-get -y install qt59-meta-dbg-full
- - sudo apt-get -y install qt59creator
- - sudo apt-get -y install qtdeclarative5-dev
+language: C++
 
+matrix:
+  include:
+    - os: osx
+      #env: CONFIG=Release
+      compiler: clang
+      osx_image: xcode8.3
+
+    - os: linux
+      dist: trusty
+      sudo: required
+      #env: CONFIG=Release
+      compiler: gcc
+    
+
+
+before_install:
+  - |
+    if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+      # Need at least Qt 5.6 for QWebEnginePage::setBackgroundColor
+      # https://launchpad.net/~beineri/+archive/ubuntu/opt-qt562-trusty
+      sudo add-apt-repository ppa:beineri/opt-qt562-trusty -y &&
+      sudo apt-get update -qq
+    fi
+  - |
+    if [ "$TRAVIS_OS_NAME" = "osx" ]; then
+        brew update &&
+        brew upgrade cmake &&
+        brew install qt5 &&
+        chmod -R 755 /usr/local/opt/qt5/*
+    fi
+install:
+  - |
+    if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+        sudo apt-get install -qq qt56base &&
+        sudo apt-get install -qq qt56webengine &&
+        source /opt/qt56/bin/qt56-env.sh
+    fi
 script:
- - cmake .
- - make
+  - mkdir build && cd build
+  - |
+    if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+        cmake .. &&
+        cmake --build .
+    fi
+  - |
+    if [ "$TRAVIS_OS_NAME" = "osx" ]; then
+        cmake -D CMAKE_PREFIX_PATH=$(brew --prefix qt5) .. &&
+        cmake --build .
+    fi
