--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,14 @@ cmake_minimum_required(VERSION 2.8.12)
 
 project(GameHall LANGUAGES CXX)
 
+option(DEVELOP_MODE "enable develop mode" OFF)
+
 set(WATCH_DIR_PATH "\"${PROJECT_SOURCE_DIR}/script/QML\"")
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
+
+#set(DEV_DIR_PATH "")
 
 message("Project Source Dir is:${WATCH_DIR_PATH}")
 
@@ -13,6 +17,13 @@ configure_file (
         "${PROJECT_SOURCE_DIR}/src/WatchDirPath.h.in"
         "${PROJECT_BINARY_DIR}/WatchDirPath.h"
 )
+
+configure_file(
+	"${PROJECT_SOURCE_DIR}/src/DevelopMode.h.in"
+	"${PROJECT_BINARY_DIR}/DevelopMode.h"
+)
+
+message("${DEVELOP_MODE}")
 
 find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 
