--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 CMakeLists.txt.user
 CMakeFiles
-MakeFile
+Makefile
 GameHall_autogen
+CMakeCache.txt
+DevelopMode.h
+GameHall
+GameHall_automoc.cpp
+WatchDirPath.h
+cmake_install.cmake
+moc_WatchReload.cpp
 
 # Mac
 *.DS_Store
