--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ before_install:
         brew update &&
         brew upgrade cmake &&
         brew install qt5 &&
-        chmod -R 755 /usr/local/opt/qt5/*
+        export QTDIR=/usr/local/opt/qt5 &&
+        chmod -R 755 /usr/local/opt/qt5/* 
     fi
 install:
   - |
@@ -41,11 +42,26 @@ script:
   - mkdir build && cd build
   - |
     if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-        cmake .. &&
-        cmake --build .
+        qmake ..
+        make
+        cd ..
     fi
   - |
     if [ "$TRAVIS_OS_NAME" = "osx" ]; then
-        cmake -D CMAKE_PREFIX_PATH=$(brew --prefix qt5) .. &&
-        cmake --build .
+        $QTDIR/bin/qmake ..
+        make
+        cd ..
+    fi
+  - mkdir dev_build && cd dev_build
+  - |
+    if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+        qmake .. DEVELOP_MODE=1
+        make
+        cd ..
+    fi
+  - |
+    if [ "$TRAVIS_OS_NAME" = "osx" ]; then
+        $QTDIR/bin/qmake .. DEVELOP_MODE=ON
+        make
+        cd ..
     fi
